# ShojiWM

./: README.md  flake.nix  tsconfig.json
docs/: README.md  docusaurus.config.ts  obs-qt-fractional-scale-subsurface.md  package-lock.json  package.json  sidebars.ts
docs/docs/: intro.md
docs/docs/architecture/: _category_.json  shojiwm.md  wayland.md
docs/docs/configuration/: _category_.json  animations.md  components.md  effects.md  input.md  (+7 more)
knowledges/: effect-invalidation.md  firefox-wayland-display-maintenance.md  fullscreen-direct-scanout-tearing.md  high-refresh-investigation.md  obs-portal-startup-delay.md  portal-install.md  process-api.md  screencast-30fps-xdpw-bug.md  shared-edge-tree-plan.md  tty-backend-notes.md  typescript-ssd-plan.md
knowledges/tasks/: M1-T1.md  M1-T2.md  M1-T3.md  M1-T4.md  M2-T1.md  M2-T2.md  M2-T3.md  M2-T4.md  M3-T1.md  M3-T2.md  M3-T3.md  M3-T4.md  M4-T1.md  M4-T2.md  M4-T3.md  M4-T4.md  M4-T5.md  M4-T6.md  M4-T7.md  M5-T1.md  M5-T2.md  M5-T3.md  README.md
nix/: package.nix
src/: presentation.rs  runtime_process.rs
src/handlers/: compositor.rs
src/shojiwm/: Cargo.toml
src/shojiwm/src/: activation_environment.rs  config.rs  input.rs  install_paths.rs  main.rs  presentation.rs  runtime_debug.rs  runtime_input.rs  runtime_key_binding.rs  runtime_pointer.rs  state.rs
src/shojiwm/src/backend/: decoration.rs  fps_counter.rs  image_copy_capture_render.rs  mod.rs  output_encode.frag  shader_effect.rs  tty.rs  window.rs  winit.rs
src/shojiwm/src/color/: drm_metadata.rs  mod.rs
src/shojiwm/src/grabs/: resize_grab.rs
src/shojiwm/src/handlers/: compositor.rs  mod.rs  xdg_shell.rs  xwayland.rs
src/shojiwm/src/protocols/: color_management.rs  screencopy.rs
src/shojiwm/src/ssd/: bridge.rs  evaluator.rs  integration.rs  mod.rs  window_model.rs
src/ssd/: integration.rs
src/xdg-desktop-portal-shojiwm/: Cargo.toml
src/xdg-desktop-portal-shojiwm/src/: picker.rs  pipewire_stream.rs  screencast.rs  toplevel_stream.rs
tools/: decoration-runtime.ts  evaluate-decoration.ts
(+25 files in other folders)
