[package]
name = "shoji_wm"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.11.0"
thiserror = "2.0.12"
smithay = {
    git = "https://github.com/bea4dev/smithay.git",
    branch = "shojiwm",
    features = ["use_system_lib", "xwayland"]
}
smithay-drm-extras = {
    git = "https://github.com/bea4dev/smithay.git",
    branch = "shojiwm",
    package = "smithay-drm-extras",
    default-features = false
}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
bumpalo = { version = "3.20.2", features = ["allocator-api2"] }
hashbrown = { version = "0.15.5", features = ["allocator-api2"] }
input = "0.10.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
xkbcommon = "0.9.0"
xcursor = "0.3.10"
cgmath = "0.18.0"
fontdb = "0.16.2"
fontdue = "0.9.3"
cosmic-text = "0.17.2"
png = "0.17.16"
resvg = "0.45.1"
mimalloc = "0.1.52"
